[gd_scene load_steps=4 format=3 uid="uid://bb7eckq557uu5"]

[ext_resource type="Script" path="res://Scenes/TabyScenes/Attacks/Boomerang/boomerang.gd" id="1_rax5j"]
[ext_resource type="Texture2D" uid="uid://8y7es6amc8d3" path="res://Assets/TabyAssets/boomerang_ph.png" id="2_3rjxr"]
[ext_resource type="Script" path="res://Scenes/TabyScenes/Attacks/Boomerang/boomerang_area.gd" id="3_34iej"]

[node name="Boomerang" type="RigidBody2D"]
collision_layer = 4
collision_mask = 4
gravity_scale = 0.0
script = ExtResource("1_rax5j")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3rjxr")

[node name="SwitchTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="ReverseTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="Death" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="BoomerangArea" type="Area2D" parent="." groups=["Attack"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("3_34iej")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BoomerangArea"]
polygon = PackedVector2Array(-12, 4, -4, -5, 4, -5, 10, 4, 7, 5, 2, 1, -5, 1, -10, 6)

[connection signal="timeout" from="SwitchTimer" to="." method="_on_switch_timer_timeout"]
[connection signal="timeout" from="ReverseTimer" to="." method="_on_reverse_timer_timeout"]
[connection signal="timeout" from="Death" to="." method="_on_death_timeout"]
